--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -4,6 +4,19 @@ body {
   font-family: $poppins;
   position: relative;
 }
+body::-webkit-scrollbar {
+  width: 1rem;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #3a3a3a8f;
+  border-radius: 6.25rem;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: $pink-soft;
+  border-radius: .3125rem;
+}
 html {
   scroll-behavior: smooth;
 }
@@ -59,7 +72,7 @@ html {
     text-decoration: none;
     -webkit-background-clip: border-box;
     background-clip: border-box;
-    background: $background-header;
+    background: #00000083;
     backdrop-filter: blur(.0625rem);
     font-family: $poppins;
     font-size: .9375rem;
