--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -177,7 +177,7 @@ footer {
     }
  
     .bxs-map {
-      background-image: linear-gradient(to right, crimson, #f87903);
+      background-image: linear-gradient(to right, #dc143c, #f87903);
       color: #00000000;
       -webkit-background-clip: text;
       background-clip: text;
