--- a/scss/layout/mediaquery/_media-1024.scss
+++ b/scss/layout/mediaquery/_media-1024.scss
@@ -23,10 +23,10 @@
       transition: all 0.5s;
 
       .logo {
-        width: 29.0625rem;
+        width: 28.0625rem;
 
         .marca {
-          font-size: 1.31rem;
+          font-size: 1.23rem;
         }
       }
 
