--- a/scss/layout/mediaquery/_media-768.scss
+++ b/scss/layout/mediaquery/_media-768.scss
@@ -244,6 +244,7 @@
       height: 2.6875rem;
       justify-self: flex-end;
       transition: all 0.5s;
+      margin-right: 1.875rem;
 
       h4 {
         font-size: 0.885rem;
